<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_bottom_sheet"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/margin_screen" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/margin_screen" />


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgTop"
            android:layout_width="200dp"
            android:layout_height="8dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@color/cinza"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTituloNovaTarefa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/nova_tarefa"
            android:textColor="@color/black"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@id/imgTop" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvMsgNovaTarefa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Adicione uma tarefa que ainda será feita"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/tvTituloNovaTarefa"
            app:layout_constraintStart_toEndOf="@id/guidelineLeft" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edTituloTarefa"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:background="@color/bgCampo"
            android:hint="@string/titulo_da_tarefa"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/tvMsgNovaTarefa"
            app:layout_constraintStart_toEndOf="@id/guidelineLeft"
            app:layout_constraintEnd_toStartOf="@id/guidelineRight"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edDescricaoTarefa"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginTop="40dp"
            android:background="@color/bgCampo"
            android:gravity="top"
            android:hint="@string/descricao_da_tarefa"
            android:maxLines="3"
            android:padding="10dp"
            app:layout_constraintEnd_toStartOf="@id/guidelineRight"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@id/edTituloTarefa" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvOpcional"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Opcional"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/edDescricaoTarefa"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btSalvarTarefa"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/background_button_arredondado"
            android:padding="20dp"
            android:text="@string/label_criar_tarefa"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guidelineRight"
            app:layout_constraintStart_toEndOf="@id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/tvOpcional" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>