<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_bottom_sheet"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/margin_screen" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/margin_screen" />


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgTop"
            android:layout_width="200dp"
            android:layout_height="8dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@color/cinza"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/area_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@id/imgTop">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTituloTarefa"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="Estudar bastante POO e Recycler view"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvStatusTarefa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="A fazer"
                android:textColor="@android:color/darker_gray"
                android:textSize="20dp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/area_icone"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintStart_toEndOf="@id/area_titulo"
            app:layout_constraintTop_toTopOf="@id/area_titulo">

            <View
                android:id="@+id/view_linha"
                android:layout_width="2dp"
                android:layout_height="80dp"
                android:background="@color/cinza"
                app:layout_constraintStart_toEndOf="@id/area_titulo"
                app:layout_constraintTop_toTopOf="@id/area_titulo" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btEditarTarefa"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="2dp"
                android:src="@drawable/editar"
                android:background="@android:color/transparent"
                app:layout_constraintStart_toEndOf="@id/view_linha" />

        </LinearLayout>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDescricaoTarefa"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginTop="40dp"
            android:text="@string/descricao_longa"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@id/guidelineRight"
            app:layout_constraintStart_toEndOf="@id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@id/area_titulo" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@id/tvDescricaoTarefa"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guidelineRight"
            app:layout_constraintStart_toEndOf="@id/guidelineLeft">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btExcluirTarefa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/excluir"
                android:drawablePadding="20dp"
                android:padding="20dp"
                android:layout_gravity="center"
                android:text="@string/label_excluir_tarefa"
                android:textAllCaps="false"
                android:textColor="@color/labelButton"
                android:textSize="20sp" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btSalvarTarefa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/background_button_arredondado"
                android:padding="20dp"
                android:text="@string/label_iniciar_tarefa"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>